готовый HTML code
goit-markup-hw-01 - готово

--- a/index.html
+++ b/index.html
@@ -7,6 +7,103 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<header>
+		<a class="logo" href="#"><span>Web</span>Studio</a>
+		<nav>
+			<ul class="top-right-nav">
+				<li>Студия</li>
+				<li>Портфолио</li>
+				<li>Контакты</li>
+			</ul>
+		</nav> <!-- header nav -->
+		<ul class="top-left-nav">
+			<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+			<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+		</ul>
+	</header> <!-- header -->
+
+	<div class="content">
+		<h1>Эффективные решения для вашего бизнеса</h1>
+		<div class="button">
+			<a href="#" type="button">Заказать услугу</a>
+		</div> 
+	</div> <!-- background content -->
+
+	<main>
+		<div>
+			<ul class="quality">
+				<li>
+					<p>Внимание к деталям</p>
+					<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+				</li>
+				<li>
+					<p>Пунктуальность</p>
+					<p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+				</li>
+				<li>
+					<p>Планирование</p>
+					<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+				</li>
+				<li>
+					<p>Современные технологии</p>
+					<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+				</li>
+			</ul>
+		</div> <!-- quality -->
+
+		<div class="aboutwork">
+			<h2>Чем мы занимаемся</h2>
+			<ul>
+				<li><img width="370" src="./images/imgdescription.jpg" alt="coding"></li>
+				<li><img width="370" src="./images/imgdescription2.jpg" alt="adaptive"></li>
+				<li><img width="370" src="./images/imgdescription3.jpg" alt="webdesign"></li>
+			</ul>
+		</div> <!-- aboutwork -->
+
+		<div class="ourteam">
+			<h2>Наша команда</h2>
+			<ul>
+				<li>
+					<div>
+						<img width="270" src="./images/imgourteam1.jpg" alt="person1">
+						<p>Игорь Демьяненко</p>
+						<p class="sub">Product Designer</p>
+					</div>
+				</li>
+				<li>
+					<div>
+						<img width="270" src="./images/imgourteam2.jpg" alt="person1">
+						<p>Ольга Репина</p>
+						<p class="sub">Frontend Developer</p>
+					</div>
+				</li>
+				<li>
+					<div>
+						<img width="270" src="./images/imgourteam3.jpg" alt="person1">
+						<p>Николай Тарасов</p>
+						<p class="sub">Marketing</p>
+					</div>
+				</li>
+				<li>
+					<div>
+						<img width="270" src="./images/imgourteam4.jpg" alt="person1">
+						<p>Михаил Ермаков</p>
+						<p class="sub">UI Designer</p>
+					</div>
+				</li>
+			</ul>
+		</div> <!-- ourteam -->
+	</main>
+
+	<footer>
+		<div class="contcts">
+			<a class="logo" href="#"><span>Web</span>Studio</a>
+			<address>
+				<a href="https://goo.gl/maps/7V2KFMS97qNm39mE7" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
+				<a href="mailto:info@devstudio.com">info@devstudio.com</a>
+				<a href="tel:+380961111111">+38 096 111 11 11</a>
+			</address>
+		</div>
+	</footer>
 </body>
 </html>
