--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="#"><span>Web</span>Studio</a>
       <nav>
+        <a class="logo" href="#"><span>Web</span>Studio</a>
+        <!-- а разве логотип это часть навигации? я теперь запутался-->
         <ul class="top-right-nav">
-          <li>Студия</li>
-          <li>Портфолио</li>
-          <li>Контакты</li>
+          <li><a href="#">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
       <!-- header nav -->
@@ -32,7 +33,8 @@
       <!-- background content -->
 
       <section>
-        <h2></h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <!-- по макету тут нет никакого заголовка, я его добавил с прошлой доработки, Вы сказали что на макете его нет, но добавить нужно -->
         <ul class="quality">
           <li>
             <h3>Внимание к деталям</h3>
@@ -59,7 +61,7 @@
       <!-- quality -->
 
       <section class="aboutwork">
-        <h4>Чем мы занимаемся</h4>
+        <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <img width="370" src="./images/imgdescription.jpg" alt="coding" />
@@ -75,35 +77,27 @@
       <!-- aboutwork -->
 
       <section class="ourteam">
-        <h4>Наша команда</h4>
+        <h2>Наша команда</h2>
         <ul>
           <li>
-            <div>
-              <img width="270" src="./images/imgourteam1.jpg" alt="person1" />
-              <h5>Игорь Демьяненко</h5>
-              <p class="sub">Product Designer</p>
-            </div>
+            <img width="270" src="./images/imgourteam1.jpg" alt="person1" />
+            <h3>Игорь Демьяненко</h3>
+            <p class="sub">Product Designer</p>
           </li>
           <li>
-            <div>
-              <img width="270" src="./images/imgourteam2.jpg" alt="person1" />
-              <h5>Ольга Репина</h5>
-              <p class="sub">Frontend Developer</p>
-            </div>
+            <img width="270" src="./images/imgourteam2.jpg" alt="person1" />
+            <h3>Ольга Репина</h3>
+            <p class="sub">Frontend Developer</p>
           </li>
           <li>
-            <div>
-              <img width="270" src="./images/imgourteam3.jpg" alt="person1" />
-              <h5>Николай Тарасов</h5>
-              <p class="sub">Marketing</p>
-            </div>
+            <img width="270" src="./images/imgourteam3.jpg" alt="person1" />
+            <h3>Николай Тарасов</h3>
+            <p class="sub">Marketing</p>
           </li>
           <li>
-            <div>
-              <img width="270" src="./images/imgourteam4.jpg" alt="person1" />
-              <h5>Михаил Ермаков</h5>
-              <p class="sub">UI Designer</p>
-            </div>
+            <img width="270" src="./images/imgourteam4.jpg" alt="person1" />
+            <h3>Михаил Ермаков</h3>
+            <p class="sub">UI Designer</p>
           </li>
         </ul>
       </section>
