--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Document</title>
   </head>
   <body>
     <header>
       <nav>
         <a class="logo" href="#"><span>Web</span>Studio</a>
-        <!-- а разве логотип это часть навигации? я теперь запутался-->
         <ul class="top-right-nav">
           <li><a href="#">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -34,7 +34,6 @@
 
       <section>
         <h2>Lorem ipsum dolor sit amet.</h2>
-        <!-- по макету тут нет никакого заголовка, я его добавил с прошлой доработки, Вы сказали что на макете его нет, но добавить нужно -->
         <ul class="quality">
           <li>
             <h3>Внимание к деталям</h3>
